# AmbienceBenchmarksThrift

./: Dockerfile  agent.thrift  compute_request.thrift  load_balancer.thrift  poll.thrift  script.sh
benchmark/fedora_results/: fedora_BEPS_client_capacity_output.txt  fedora_BEPS_client_capacity_parsed.txt  fedora_BEPS_client_client_in_container_output.txt  fedora_BEPS_client_client_in_container_parsed.txt  fedora_BEPS_client_endpoint_vm_output.txt  fedora_BEPS_client_endpoint_vm_parsed.txt  fedora_BEPS_client_host_output.txt  fedora_BEPS_client_host_parsed.txt  fedora_BEPS_client_output.txt  fedora_BEPS_client_parsed.txt  fedora_BEPS_client_vm_output.txt  fedora_BEPS_client_vm_parsed.txt  fedora_BEPS_client_write_endpoint_output.txt  fedora_BEPS_client_write_endpoint_parsed.txt  fedora_BEPS_server_base_output.txt  fedora_BEPS_server_base_parsed.txt  fedora_BEPS_server_client_in_container_output.txt  fedora_BEPS_server_client_in_container_parsed.txt  fedora_BEPS_server_client_vm_output.txt  fedora_BEPS_server_client_vm_parsed.txt  fedora_BEPS_server_endpoint_vm_output.txt  fedora_BEPS_server_endpoint_vm_parsed.txt  fedora_BEPS_server_host_output.txt  fedora_BEPS_server_host_parsed.txt  fedora_BEPS_server_write_endpoint_output.txt  fedora_BEPS_server_write_endpoint_parsed.txt
benchmark/fedora_scripts/: launch_fedora_10.sh  launch_fedora_72.sh  launch_fedora_public.sh  make_load_balancer.sh  make_load_balancer_logging.sh  parse_BEPS_output.py  parse_endpoint_vm_client.sh  parse_load_balancer_endpoint.sh  parse_load_balancer_server.sh  run_BEPS_capacity_client.sh  run_BEPS_capacity_server.sh  run_load_balancer_client.sh  run_load_balancer_client2.sh  run_load_balancer_client_in_container.sh  run_load_balancer_client_vm.sh  run_load_balancer_endpoint_client.sh  run_load_balancer_endpoint_vm.sh  run_load_balancer_host.sh  run_load_balancer_server.sh  run_load_balancer_write_endpoint.sh  start_load_balancer_dep.sh
benchmark/new_results/: fedora_combined_1_lb_output.txt  fedora_combined_1_lb_parsed.txt  fedora_combined_1_no_log_we_output.txt  fedora_combined_1_no_log_we_parsed.txt  fedora_combined_1_we_output.txt  fedora_combined_2_lb_output.txt  fedora_combined_2_lb_parsed.txt  fedora_combined_2_no_log_we_output.txt  fedora_combined_2_no_log_we_parsed.txt  fedora_combined_2_we_output.txt  fedora_combined_3_lb_output.txt  fedora_combined_3_lb_parsed.txt  fedora_combined_3_no_log_we_output.txt  fedora_combined_3_no_log_we_parsed.txt  fedora_combined_3_we_output.txt  fedora_combined_4_lb_output.txt  fedora_combined_4_lb_parsed.txt  fedora_combined_4_no_log_we_output.txt  fedora_combined_4_no_log_we_parsed.txt  fedora_combined_4_we_output.txt  fedora_combined_5_lb_output.txt  fedora_combined_5_lb_parsed.txt  fedora_combined_5_no_log_we_output.txt  fedora_combined_5_no_log_we_parsed.txt  fedora_combined_5_we_output.txt  fedora_combined_5_we_parsed.txt  fedora_results0_1_parsed.txt  fedora_results0_2_parsed.txt  fedora_results15_1_no_log_we_output.txt  fedora_results15_1_no_log_we_parsed.txt  fedora_results15_2_no_log_we_output.txt  fedora_results15_2_no_log_we_parsed.txt  fedora_results15_3_no_log_we_output.txt  fedora_results15_3_no_log_we_parsed.txt  fedora_results15_4_no_log_we_output.txt  fedora_results15_4_no_log_we_parsed.txt  fedora_results15_5_lb_output.txt  fedora_results15_5_lb_parsed.txt  fedora_results15_5_no_log_we_output.txt  fedora_results15_5_no_log_we_parsed.txt  (+76 more)
benchmark/new_scripts/: fedora_test1.sh  fedora_test2.sh  fedora_test3.sh  fedora_test_client1.sh  fedora_test_client2.sh  fedora_test_client3.sh  make_lb.sh  make_lb_logging.sh  make_poll.sh  parse_fedora_test1.py  parse_poll_output.py  run_agents.sh  run_all_services.sh  run_all_services_no_log.sh  run_combined_deployment1.sh  run_combined_deployment1_no_log.sh  run_combined_deployment2.sh  run_combined_deployment2_no_log.sh  run_combined_deployment4.sh  run_combined_deployment4_client.sh  run_combined_deployment4_no_log.sh  run_combined_deployment5_client.sh  run_compile_wedpt.sh  run_db.sh  run_just_poll.sh  run_poll.sh  run_poll_one_container.sh  run_poll_two_container.sh  run_separated_deployment1.sh  (+15 more)
compute_request/: CMakeLists.txt  client.cpp  compute_request_ui.cpp  ports.h  price_calculator.cpp  provider.cpp  resource_db.cpp  test_compute_request.cpp  time_verification.cpp  user_verification.cpp
load_balancer/: CMakeLists.txt  Makefile  course_grain.sh  experiment.sh  fine_grain.sh  linux_write_endpoint_output.txt  linux_write_endpoint_output1.txt  linux_write_endpoint_parsed.txt  linux_write_endpoint_parsed1.txt  linux_zero_logging.txt  linux_zero_logging_parsed.txt  load_balancer.cpp  load_balancer_client.py  load_balancer_client2.py  parse_course_grain.py  parse_fine_grain.py  parse_write_endpoint.py  parse_zero_logging.py  ports.h  read_endpoint.cpp  run_db.sh  run_read_edpt.sh  run_worker.sh  run_workers.sh  run_write_edpt.sh  test.py  test_capacity.py  test_load_balancer.cpp  test_read_endpoint.py  test_write_endpoint.py  test_write_endpoint.sh  test_write_endpoint2.py  test_write_endpoint3.py  tweet_db.cpp  user_db.cpp  worker.cpp  write_endpoint.cpp  zero_logging.sh  zero_logging_test.py
load_balancer/course_grain_results/: linux_course_grain_parsed.txt  linux_read_endpoint.txt  linux_tweet_db.txt  linux_user_db.txt  linux_worker_0.txt  linux_worker_3.txt  load_balancer.txt  read_endpoint.txt  worker_1.txt  write_endpoint.txt
load_balancer/fine_grain_results/: linux_fine_grain_parsed.txt  linux_worker_1.txt  linux_worker_2.txt  linux_worker_3.txt  linux_worker_4.txt  load_balancer.txt  read_endpoint.txt  tweet_db.txt  user_db.txt  worker_0.txt  worker_4.txt  write_endpoint.txt
new_load_balancer/: Makefile  load_balancer.cpp  ports.h  read_endpoint.cpp  test_write_endpoint.py  tweet_db.cpp  user_db.cpp  worker.cpp  write_endpoint.cpp
poll/: CMakeLists.txt  Makefile  poll.cpp  poll_bench_agent.cpp  poll_param_bench_agent.cpp  ports.h  test_poll_agent.py  test_poll_bench_agent.cpp  test_poll_param_agent.py  test_poll_param_bench_agent.cpp
ubuntu_containers/: Dockerfile
(+55 files in other folders)
